--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:paddingVertical="20dp">
+            android:paddingVertical="20dp"
+            android:background="@color/lightlightgray">
 
             <TextView
                 android:layout_width="0dp"
