--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,32 +8,37 @@
     tools:context=".MainActivity">
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/lightlightgray"
             android:orientation="horizontal"
-            android:paddingVertical="20dp"
-            android:background="@color/lightlightgray">
+            android:paddingVertical="20dp">
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="2048"
-                android:textStyle="bold"
+                android:textAlignment="center"
                 android:textSize="48sp"
-                android:textAlignment="center"/>
+                android:textStyle="bold" />
+
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_gravity="end"
                 android:layout_weight="1"
-                android:orientation="horizontal"
-                android:layout_gravity="end">
+                android:baselineAligned="false"
+                android:orientation="horizontal">
 
                 <LinearLayout
                     android:layout_width="0dp"
@@ -46,13 +51,15 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="POINTS"
-                        android:textStyle="bold"/>
+                        android:textStyle="bold" />
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="0"
-                        android:textStyle="bold"/>
+                        android:textStyle="bold" />
                 </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -64,175 +71,39 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="RECORD"
-                        android:textStyle="bold"/>
+                        android:textStyle="bold" />
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="0"
-                        android:textStyle="bold"/>
+                        android:textStyle="bold" />
                 </LinearLayout>
             </LinearLayout>
 
         </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"></LinearLayout>
+
         <GridLayout
-            android:layout_marginTop="20dp"
             android:layout_width="336dp"
             android:layout_height="336dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/rounded_corners"
+            android:backgroundTint="@color/grid_background"
             android:columnCount="4"
-            android:rowCount="4"
-            android:padding="2dp"
-            android:background="#000000">
+            android:padding="6dp"
+            android:rowCount="4">
 
             <TextView
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:layout_gravity="center"
-                android:gravity="center"
-                android:text="0"
-                android:textSize="24sp"
                 android:layout_margin="2dp"
                 android:background="@drawable/rounded_corners"
-                android:backgroundTint="@color/white"
-                />
-            <TextView
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:layout_gravity="center"
+                android:backgroundTint="@color/tile_color"
                 android:gravity="center"
                 android:text="0"
-                android:textSize="24sp"
-                android:layout_margin="2dp"
-                android:background="@drawable/rounded_corners"/>
-            <TextView
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:text="0"
-                android:textSize="24sp"
-                android:layout_margin="2dp"
-                android:background="@drawable/rounded_corners"/>
-            <TextView
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:text="0"
-                android:textSize="24sp"
-                android:background="@color/white"
-                android:layout_margin="2dp"/>
-            <TextView
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:text="0"
-                android:textSize="24sp"
-                android:background="@color/white"
-                android:layout_margin="2dp"/>
-            <TextView
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:text="0"
-                android:textSize="24sp"
-                android:background="@color/white"
-                android:layout_margin="2dp"/>
-            <TextView
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:text="0"
-                android:textSize="24sp"
-                android:background="@color/white"
-                android:layout_margin="2dp"/>
-            <TextView
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:text="0"
-                android:textSize="24sp"
-                android:background="@color/white"
-                android:layout_margin="2dp"/>
-            <TextView
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:text="0"
-                android:textSize="24sp"
-                android:background="@color/white"
-                android:layout_margin="2dp"/>
-            <TextView
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:text="0"
-                android:textSize="24sp"
-                android:background="@color/white"
-                android:layout_margin="2dp"/>
-            <TextView
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:text="0"
-                android:textSize="24sp"
-                android:background="@color/white"
-                android:layout_margin="2dp"/>
-            <TextView
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:text="0"
-                android:textSize="24sp"
-                android:background="@color/white"
-                android:layout_margin="2dp"/>
-            <TextView
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:text="0"
-                android:textSize="24sp"
-                android:background="@color/white"
-                android:layout_margin="2dp"/>
-            <TextView
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:text="0"
-                android:textSize="24sp"
-                android:background="@color/white"
-                android:layout_margin="2dp"/>
-            <TextView
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:text="0"
-                android:textSize="24sp"
-                android:background="@color/white"
-                android:layout_margin="2dp"/>
-            <TextView
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:text="0"
-                android:textSize="24sp"
-                android:background="@color/white"
-                android:layout_margin="2dp"/>
+                android:textSize="24sp" />
+
 
         </GridLayout>
     </LinearLayout>
