--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -84,6 +84,7 @@
         </LinearLayout>
 
         <GridLayout
+            android:id="@+id/game_grid"
             android:layout_width="336dp"
             android:layout_height="336dp"
             android:layout_marginTop="20dp"
