--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -85,8 +85,8 @@
 
         <GridLayout
             android:id="@+id/game_grid"
-            android:layout_width="336dp"
-            android:layout_height="336dp"
+            android:layout_width="380dp"
+            android:layout_height="380dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/rounded_corners"
             android:backgroundTint="@color/grid_background"
@@ -95,15 +95,17 @@
             android:rowCount="4">
 
             <TextView
+                android:id="@+id/block_template"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
-                android:layout_gravity="center"
-                android:layout_margin="2dp"
+                android:layout_gravity="start"
+                android:layout_margin="6dp"
                 android:background="@drawable/rounded_corners"
                 android:backgroundTint="@color/tile_color"
                 android:gravity="center"
                 android:text="0"
-                android:textSize="24sp" />
+                android:textSize="24sp"
+                android:visibility="gone"/>
 
 
         </GridLayout>
