--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -85,6 +85,7 @@
                         android:textColor="@color/title_color"/>
 
                     <TextView
+                        android:id="@+id/points"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="0"
@@ -107,6 +108,7 @@
                         android:textColor="@color/title_color"/>
 
                     <TextView
+                        android:id="@+id/best_score"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="0"
