--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -115,6 +115,28 @@
                         android:textStyle="bold"
                         android:textColor="@color/title_color"/>
                 </LinearLayout>
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="vertical"
+                    android:textAlignment="center">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="MOVES"
+                        android:textStyle="bold"
+                        android:textColor="@color/title_color"/>
+
+                    <TextView
+                        android:id="@+id/moves_count"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="0"
+                        android:textStyle="bold"
+                        android:textColor="@color/title_color"/>
+                </LinearLayout>
             </LinearLayout>
 
         </LinearLayout>
