kolorki + koniec gry ekran

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,30 @@
     <color name="white">#FFFFFFFF</color>
     <color name="lightlightgray">#DEDEDE</color>
     <color name="grid_background">#b59b86</color>
-    <color name="tile_color">#e3bfa1</color>
     <color name="title_color">#555555</color>
     <color name="transparent">#00000000</color>
+    <color name="end_game_screen">#99000000</color>
+    <color name="button_try_again">#994444</color>
+    <color name="button_home_page">#449944</color>
+    <color name="button_continue">#444499</color>
+    <color name="best_score">#999999</color>
+    <color name="your_score">#cccccc</color>
+    <color name="gold">#AAAA00</color>
+    <color name="tile2_color">#e3bfa1</color>
+    <color name="tile4_color">#c77240</color>
+    <color name="tile8_color">#d94c21</color>
+    <color name="tile16_color">#d9250d</color>
+    <color name="tile32_color">#a60000</color>
+    <color name="tile64_color">#6b0000</color>
+    <color name="tile128_color">#ff0000</color>
+    <color name="tile256_color">#ff5151</color>
+    <color name="tile512_color">#ff6e6e</color>
+    <color name="tile1024_color">#ffe74a</color>
+    <color name="tile2048_color">#e0a500</color>
+    <color name="tile4096_color">#26bf00</color>
+    <color name="tile8192_color">#13ab45</color>
+    <color name="tile16384_color">#1dab6b</color>
+    <color name="tile32768_color">#25ba90</color>
+    <color name="tile65536_color">#00ffb7</color>
+    <color name="tile131072_color">#0077ff</color>
 </resources>
